# Cry

./: .gitignore  Cargo.toml  README.md  my.key  note  output.enc
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: architecture-and-security.md  developer-guide.md  identity-and-ssh.md  repo-review.md
src/: bench.rs  cipher.rs  crydna.rs  error.rs  header.rs  kdf.rs  keygen.rs  main.rs  ssh.rs
