[package]
name = "cry"
version = "0.4.0"
edition = "2024"
description = "A fast, minimal CLI cryptography tool supporting AES-256-GCM and ChaCha20-Poly1305"
authors = ["you"]
 
[[bin]]
name = "cry"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
 
# AES-256-GCM
aes-gcm = "0.10"
 
# ChaCha20-Poly1305
chacha20poly1305 = "0.10"
 
# Secure random number generation
rand = "0.8"
 
# Key derivation (Argon2id)
argon2 = "0.5"
 
# Secure memory zeroing
zeroize = { version = "1", features = ["derive"] }
 
# SHA-256 for HMAC and fingerprint
sha2 = "0.10"
 
# HMAC for header authentication
hmac = "0.12"
 
# Error handling
anyhow = "1"
thiserror = "1"
 
# Password prompt (no echo)
rpassword = "7"
 
[dev-dependencies]
tempfile = "3"
